force-app/main/default/objects/Account/fields/Blood_Group__c.field-meta.xml
<CustomField>
    <fullName>Blood_Group__c</fullName>
    <description>Stores blood group information</description>
    <label>Blood Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A+ve</fullName>
            </value>
            <value>
                <fullName>B+ve</fullName>
            </value>
            <value>
                <fullName>O-ve</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>