force-app/main/default/objects/Account/fields/CareGiver__c.field-meta.xml
<CustomField>
    <fullName>CareGiver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CareGiver</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>CareGivers</relationshipLabel>
    <relationshipName>CareGivers</relationshipName>
    <type>Lookup</type>
</CustomField>