force-app/main/default/objects/Account/fields/MedId__c.field-meta.xml
<CustomField>
    <fullName>MedId__c</fullName>
    <description>Unique Identifier of the patient</description>
    <label>MedId</label>
    <length>10</length>
    <type>Text</type>
</CustomField>